set headlines on subpages

--- a/ct-today.html
+++ b/ct-today.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DX-CharlyTango Today</title>
 </head>
-<body class="bg-page font-family-roboto-mono">
+<body onload="setTimeout(initCtToday, 1000) " class="bg-page font-family-roboto-mono">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
@@ -21,10 +21,10 @@
 
 
 <div class="d-flex justify-around align-center margin-top-30px margin-bottom-30px">
-    <div class="welcome-text txt-center">
+    <div class="welcome-text w-50 txt-center">
         <h2>
-            Im Jahr 2002 ist der Internationale Borderland<br> 
-            DX Group Charly Tango aus dem Register ausgetragen worden.<br>
+            Im Jahr 2002 ist der Internationale Borderland
+            DX Group Charly Tango aus dem Register ausgetragen worden.
             <br>
             Ich mache Weiter !!!!!    
         </h2>    
