--- a/neues-mitglied.html
+++ b/neues-mitglied.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DX-CharlyTango Neue Mitglieder</title>
 </head>
-<body class="bg-page font-family-roboto-mono">
+<body onload="setTimeout(initNewMember, 1000)" class="bg-page font-family-roboto-mono">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
@@ -23,16 +23,19 @@
     <img src="./assets/img/kodax-02.gif" alt="">
 </div>
 
-<div class="welcome-text txt-center">
-    <h2>
-        Neues Mitglied werden   
-    </h2>  
-    <p>
-        Hier könnt ihr euch als Neues Mitglied anmelden.<br>
-        Einfach das Anmeldeformular ausfüllen oder per Post.<br>
-        <br>
-        Durch die Anmeldung angegebene Daten werden nicht an dritte weitergegeben.!!!!!
-    </p>
+<div class="welcome-text d-flex justify-center txt-center">
+    <div class="w-50">
+        <h2>
+            Neues Mitglied werden   
+        </h2>  
+    
+        <p>
+            Hier könnt ihr euch als Neues Mitglied anmelden.<br>
+            Einfach das Anmeldeformular ausfüllen oder per Post.<br>
+            <br>
+            Durch die Anmeldung angegebene Daten werden nicht an dritte weitergegeben.!!!!!
+        </p>
+    </div>    
 </div>
 
             <div class=" w-100 d-flex justify-center align-center txt-center">
