--- a/about-us.html
+++ b/about-us.html
@@ -37,45 +37,55 @@
         <img src="./assets/img/kodax-02.gif" alt="">
     </div>
 
-    <div class="welcome-text txt-center">
-        Im Februar 1985 wurde dieser Club gegründet mit dem Viezepräsidenten Fred aus<br>
-        Winterwijk 19CT001 in den Niederlanden.<br> 
-        Im Jahre 1987 wurde der Club als Verein eingetragen.<br>
-        <br>
-        “Borderland“ bedeutet übersetzt “Grenzland“ und das war im Fall die Gegend zwischen<br>
-        dem Deutschen Borken / Emmerich und dem Niederländischen Arnsheim am Niederrhein.<br>
-        PIT ’s weltweite DX-Gruppe hatte sich zum Ziel gesetzt  Freundschaften über den CB-Funk<br>
-        Zu schließen. Ganz unabhängig von Nationalität, Religionszugehörigkeit, Rasse und<br>
-        Politische Einstellung.<br>
-        <br>
-        In jedem Jahr fanden große Int. Meeting, DX - Expeditionen, Konteste mit Sonderrufzeichen für<br>
-        Holidday, Fieldays und Meetings statt. Der CT war mit seinen Mitgliedern der AFD<br>
-        angeschlossen und damit im DAKfCBNF vertreten.<br>
-        <br>
-        Die damals neuesten Informationen standen in der jährlich erschienenden Mitgliederliste,<br>
-        die damals schon 120 Seiten stark war und mit vielen Fotos illustriert war.<br>
-        <br>
-        Der CHARLYTANGO-DX-CLUB wurde im Februar 1985 in Borken / Wesf.<br>
-        von 13 CT 001 PIT ( Eberhard ) gegründet. Es war ein international tätiger<br>
-        Verein mit damals mehr als 6000 aktiven Funkern auf der ganzen Welt.<br>
-        <br>
-        Die Ziele des Clubs waren, DX im CB - Band ( 11m ) zu fahren um die<br>
-        internationale Freundschaft unter den Funkern zu fördern ohne Vorurteile<br>
-        gegen Religion, Rasse oder politischer Gesinnung.<br>
-        In dem DX - Club hatte jeder Funker sein eigenes Rufzeichen ( welches auch<br>
-        heute noch aktiv ist ) , wodurch er im DX - Verkehr schnell und sicher für die<br>
-        Gegenstation erkennbar ist und der QSL - Kartenaustausch ohne langwierige<br>
-        Adressenangaben ermöglicht wird. Viele aktive Stationen mit dem CT - Call<br>
-        sind im Ausland QRV.<br>
-        <br>
-        Über die Geschichte des Internationalen Borderland DX - Club und allgemeine<br>
-        Informationen zum Thema Funk sowie Links werdet ihr hier finden.<br>
-        <br>
-        <span>
-            im Jahr 2000 ist Eberhard Albrecht alias PIT 13CT001<br> 
-            nach schwerer Krankheit im Alter von nur 49 Jahren verstorben.<br>
-            Er war rund um die Uhr für seinen Club und seine Mitglieder zu erreichen !!
-        </span>    
+    <div class="welcome-text justify-center d-flex txt-center">
+        <div class="w-50">    
+            <p>
+                Im Februar 1985 wurde dieser Club gegründet mit dem Viezepräsidenten Fred aus
+                Winterwijk 19CT001 in den Niederlanden.
+                Im Jahre 1987 wurde der Club als Verein eingetragen.
+            </p>
+            <p>
+                “Borderland“ bedeutet übersetzt “Grenzland“ und das war im Fall die Gegend zwischen
+                dem Deutschen Borken / Emmerich und dem Niederländischen Arnsheim am Niederrhein.
+                PIT's weltweite DX-Gruppe hatte sich zum Ziel gesetzt  Freundschaften über den CB-Funk
+                Zu schließen. Ganz unabhängig von Nationalität, Religionszugehörigkeit, Rasse und
+                Politische Einstellung.
+            </p>
+            <p>
+            In jedem Jahr fanden große Int. Meeting, DX - Expeditionen, Konteste mit Sonderrufzeichen für
+            Holidday, Fieldays und Meetings statt. Der CT war mit seinen Mitgliedern der AFD
+            angeschlossen und damit im DAKfCBNF vertreten.
+            </p>
+            <p>
+            Die damals neuesten Informationen standen in der jährlich erschienenden Mitgliederliste,
+            die damals schon 120 Seiten stark war und mit vielen Fotos illustriert war.
+            </p>
+            <p>
+                Der CHARLYTANGO-DX-CLUB wurde im Februar 1985 in Borken / Wesf.
+                von 13 CT 001 PIT ( Eberhard ) gegründet. Es war ein international tätiger
+                Verein mit damals mehr als 6000 aktiven Funkern auf der ganzen Welt.
+            </p>
+            <p>
+                Die Ziele des Clubs waren, DX im CB - Band ( 11m ) zu fahren um die
+                internationale Freundschaft unter den Funkern zu fördern ohne Vorurteile
+                gegen Religion, Rasse oder politischer Gesinnung.
+                In dem DX - Club hatte jeder Funker sein eigenes Rufzeichen ( welches auch
+                heute noch aktiv ist ) , wodurch er im DX - Verkehr schnell und sicher für die
+                Gegenstation erkennbar ist und der QSL - Kartenaustausch ohne langwierige
+                Adressenangaben ermöglicht wird. Viele aktive Stationen mit dem CT - Call
+                sind im Ausland QRV.
+            </p>
+            <p>
+                Über die Geschichte des Internationalen Borderland DX - Club und allgemeine<br>
+                Informationen zum Thema Funk sowie Links werdet ihr hier finden.<br>
+                
+            </p>
+            <p>
+                im Jahr 2000 ist Eberhard Albrecht alias PIT 13CT001<br> 
+                nach schwerer Krankheit im Alter von nur 49 Jahren verstorben.<br>
+                Er war rund um die Uhr für seinen Club und seine Mitglieder zu erreichen !!
+            </p>
+        </div>    
     </div>
 
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
