Styling CB-Speech section

--- a/cb-sprache.html
+++ b/cb-sprache.html
@@ -39,6 +39,37 @@
                 </p>
             </div>
 
+            <div class="w-50  d-flex justify-center column align-center">
+                <p>
+                    Klicke auf ein Buchstaben, um schneller an dein Ziel zu kommen.
+                </p>
+                <div class="letter-search-box">
+                    <a href="#a">A</a>
+                    <a href="#b">B</a>
+                    <a href="#c">C</a>
+                    <a href="#d">D</a>
+                    <a href="#e">E</a>
+                    <a href="#f">F</a>
+                    <a href="#g">G</a>
+                    <a href="#h">H</a>
+                    <a href="#i">I</a>
+                    <a href="#k">K</a>
+                    <a href="#l">L</a>
+                    <a href="#m">M</a>
+                    <a href="#n">N</a>
+                    <a href="#o">O</a>
+                    <a href="#p">P</a>
+                    <a href="#q">Q</a>
+                    <a href="#r">R</a>
+                    <a href="#s">S</a>
+                    <a href="#t">T</a>
+                    <a href="#u">U</a>
+                    <a href="#w">W</a>
+                    <a href="#x">X</a>
+                    <a href="#z">Z</a>
+                </div>
+            </div>
+
             <div class="w-50" id="">
                 <h2 id="a" class="letterHeadline">A</h2>
                 <div class="d-flex justify-center speech-content">
