Members up to Bulgaria 178 CT

--- a/ct-today.html
+++ b/ct-today.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DX-CharlyTango Today</title>
 </head>
-<body onload="setTimeout(initCtToday, 1000) " class="bg-page font-family-roboto-mono">
+<body onload="initCtToday() " class="bg-page font-family-roboto-mono">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
