--- a/in-memorian.html
+++ b/in-memorian.html
@@ -10,7 +10,7 @@
     <script src="./assets/javascript/main.js"></script>
     <title>DX-CharlyTango About</title>
 </head>
-<body onload="setTimeout(initInMemorian, 1000)" class="bg-page font-family-roboto-mono">
+<body onload="initInMemorian()" class="bg-page font-family-roboto-mono">
     <!--W3-Include-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <div w3-include-html="./assets/template/navbar.html"></div>
