--- a/neues-mitglied.html
+++ b/neues-mitglied.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DX-CharlyTango Neue Mitglieder</title>
 </head>
-<body onload="setTimeout(initNewMember, 1000)" class="bg-page font-family-roboto-mono">
+<body onload="initNewMember()" class="bg-page font-family-roboto-mono">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
