--- a/cb-abkürzung.html
+++ b/cb-abkürzung.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body class="bg-page">
+<body onload="initCbShortCuts()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,7 +20,6 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Abkürzungen im CB-Funk:</h2>
             <img class="margin-top-30px margin-bottom-30px txt-center" src="./assets/img/CBfunke2 (1).gif" alt="">
             <div class="d-flex w-30 column justify-center margin-bottom-30px">
                     <p>
