--- a/cb-regeln.html
+++ b/cb-regeln.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body class="bg-page">
+<body onload="initCbRegeln()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,8 +20,6 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Goldene Regeln für den Betrieb von CB-Funkgeräten</h2>
-            
             <div class="cb-regulate-content w-30">
                 <h3>
                     1. Was benötige ich zum Betrieb von CB-Funkgeräten?
