--- a/cb-schutzzone.html
+++ b/cb-schutzzone.html
@@ -19,12 +19,12 @@
     <!--Header-->
     <div w3-include-html="./assets/template/header.html"></div>  
     <!--Content-->
-
-        <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>CB-Schutzzone</h2>
-            <img class="margin-top-30px margin-bottom-30px txt-center" src="./assets/img/CBfunke2 (1).gif" alt="">
+    <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
+        <img class="margin-top-30px margin-bottom-30px txt-center" src="./assets/img/CBfunke2 (1).gif" alt="">
+        <div class="w-70 d-flex justify-center">
             <div id="radioProtectionZone" class="d-flex flex-wrap align-center justify-center"></div>
-        </div>  
+        </div>    
+    </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
         <img src="./assets/img/kodax-02.gif" alt="">
