--- a/cb-swr.html
+++ b/cb-swr.html
@@ -21,8 +21,7 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>CB-Funk - SWR - Dämpfung - Verluste</h2>
-            <div>
+            <div class="w-50">
                 <p>
                     Im Zusammenhang mit der Montage einer Funkantenne tauchen oftmals die Begriffe SWR, Dämpfung, Verluste auf.
                 </p>
