--- a/freie-funknetze.html
+++ b/freie-funknetze.html
@@ -11,7 +11,7 @@
     <script src="./assets/javascript/main.js"></script>
     <script src="./assets/javascript/freie-funknetze.js"></script>
 </head>
-<body class="bg-page">
+<body onload="initFreieFunknetze()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
