--- a/hochfrequenzwellen.html
+++ b/hochfrequenzwellen.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body onload="initFrequenzList()" class="bg-page">
+<body onload="initHeadlineHW()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,48 +20,47 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Hochfrequenzwellen</h2>
             <div class="max-width-50">
                 <p>
-                    1. Es sind <strong>keine Reflektionen</strong>  der <strong>Ionosphäre:</strong><br>
-                    Die F2-Schicht ist definitiv das wichtigste Medium zur Reflektion<br> 
-                    bzw. der Bildung einer Raumwelle für den Weitverkehr ( DX = 4000 Km)!<br> 
-                    Wir befinden uns aber zur Zeit im <strong>Minimum 2006 - 2007</strong> und es kommt danach<br>
-                    zu den 24. Sonnenfleckenmaximum erst im <strong>Jahr 2011 - 2012</strong><br> 
-                    (es soll kräftiger sein als der 23. Zyklus!)<br>
+                    1. Es sind <b>keine Reflektionen</b>  der <b>Ionosphäre:</b>
+                    Die F2-Schicht ist definitiv das wichtigste Medium zur Reflektion
+                    bzw. der Bildung einer Raumwelle für den Weitverkehr ( DX = 4000 Km)! 
+                    Wir befinden uns aber zur Zeit im <b>Minimum 2006 - 2007</b> und es kommt danach
+                    zu den 24. Sonnenfleckenmaximum erst im <b>Jahr 2011 - 2012</b> 
+                    (es soll kräftiger sein als der 23. Zyklus!)
                     <br>
                     <strong>    
                         Also die derzeitigen Störungen kommen nicht von der Ionosphäre (F2-Schicht)!!!
                     </strong>    
                 </p>
                 <p>
-                    2. <strog>Jedes Jahr</strog> vom Monat Mai bis August in ausnahmefällen bis Dezember kommt es zu<br>
-                    Troposphärisch bedingte Überreichweiten (im UKW, UHF, VHF-Band) Infolge von Luftbewegungen<br>
-                    und sonstigen meteorologischen Einflüssen kann die Änderung der Lufttemperatur sowie<br>
-                    der relativen Feuchte sehr sprunghaft und dadrch vom Normalverlauf abweichend erfolgen.<br> 
-                    Eine solche Temperaturumkehr ändert die Luftdichte. Dabei bildet die Warmluft<br>
-                    ein düneres Medium als die Kaltluft. Nach dem Berechnungsgesetz der Optik wird<br>
-                    ein Lichtstrahl beim Übertritt aus einem optisch dichten Medium in ein optisch<br>
-                    dünneres Medium vom Lote weg gebrochen, im umgekehrten Fall erfährt er eine<br>
-                    Brechung zum Lote hin. Auch die UKW verhalten sich bei Dichteänderungen des<br>
-                    Ausbreitungsmediums wie Lichtstrahlen.<br>
-                    Beim Eintritt in eine Inversionsschicht erfährt die Wellenfront eine Krümmung zur Erd- oberfläche hin.<br>
-                    Die Inversionsschichten befinden sich in verhältnis- maeszig geringer Höhe ueber den Erdboden.<br> 
-                    Entweder sind es Boden- inversionen in Erdbodennaehe (geringe Ueberreichweiten)<br>
-                    oder Höhen- inversionen in Höhen bis zu einigen tausend Metern (große Überreich- weiten).<br> 
-                    Bei starken Luftbewegungen können sich wegen der ständigen Durchmischung der Luftmassen<br> 
-                    Inversionen nich ausbilden. Weitreichende Höheninversionen entstehen im Zusammenhang mit ausgedehnten<br> 
-                    Hoch- druckgebieten.<br> 
-                    In den Monaten September bis November sind tropos- phaerisch bedingte Überreichweiten in Mitteleuropa sehr häufig.<br>
-                    Ein besonders Phänomen ist die seltene troposphärische Schlauchüber- tragung (engl.: Ducting).<br> 
-                    Hatten wir in <strong>Mitte August 1999!</strong> Sie kann entstehen,<br> 
-                    wenn mehrere Inversionsschichten übereinanderliegen. Ein Funkstrahl,<br> 
-                    der zwischen diese Schichten gelangt, wird so lange von einer Schicht<br> 
-                    zur anderen reflektiert, bis die untere Schicht ''Löcher'' zeigt.<br> 
-                    Dieser Fall ist dadurch gekennzeichnet, dasz Verbindungen nur<br> 
-                    mit weit entfernten Stationen in einem oft sehr eng begrenzten Raum möglich sind.<br> 
-                    Dazwischen befindet sich meistens eine empfangstote Zone. Da durch die Klimaverschiebung<br> 
-                    dies relativ zu sehen ist, können wir es fast im ganzen Jahr zu unregelmäßigen<br> 
+                    2. <b>Jedes Jahr</b> vom Monat Mai bis August in ausnahmefällen bis Dezember kommt es zu
+                    Troposphärisch bedingte Überreichweiten (im UKW, UHF, VHF-Band) Infolge von Luftbewegungen
+                    und sonstigen meteorologischen Einflüssen kann die Änderung der Lufttemperatur sowie
+                    der relativen Feuchte sehr sprunghaft und dadrch vom Normalverlauf abweichend erfolgen. 
+                    Eine solche Temperaturumkehr ändert die Luftdichte. Dabei bildet die Warmluft
+                    ein düneres Medium als die Kaltluft. Nach dem Berechnungsgesetz der Optik wird
+                    ein Lichtstrahl beim Übertritt aus einem optisch dichten Medium in ein optisch
+                    dünneres Medium vom Lote weg gebrochen, im umgekehrten Fall erfährt er eine
+                    Brechung zum Lote hin. Auch die UKW verhalten sich bei Dichteänderungen des
+                    Ausbreitungsmediums wie Lichtstrahlen.
+                    Beim Eintritt in eine Inversionsschicht erfährt die Wellenfront eine Krümmung zur Erd- oberfläche hin.
+                    Die Inversionsschichten befinden sich in verhältnis- maeszig geringer Höhe ueber den Erdboden. 
+                    Entweder sind es Boden- inversionen in Erdbodennaehe (geringe Ueberreichweiten)
+                    oder Höhen- inversionen in Höhen bis zu einigen tausend Metern (große Überreich- weiten). 
+                    Bei starken Luftbewegungen können sich wegen der ständigen Durchmischung der Luftmassen 
+                    Inversionen nich ausbilden. Weitreichende Höheninversionen entstehen im Zusammenhang mit ausgedehnten 
+                    Hoch- druckgebieten. 
+                    In den Monaten September bis November sind tropos- phaerisch bedingte Überreichweiten in Mitteleuropa sehr häufig.
+                    Ein besonders Phänomen ist die seltene troposphärische Schlauchüber- tragung (engl.: Ducting). 
+                    Hatten wir in <b>Mitte August 1999!</b> Sie kann entstehen, 
+                    wenn mehrere Inversionsschichten übereinanderliegen. Ein Funkstrahl, 
+                    der zwischen diese Schichten gelangt, wird so lange von einer Schicht 
+                    zur anderen reflektiert, bis die untere Schicht ''Löcher'' zeigt. 
+                    Dieser Fall ist dadurch gekennzeichnet, dasz Verbindungen nur 
+                    mit weit entfernten Stationen in einem oft sehr eng begrenzten Raum möglich sind. 
+                    Dazwischen befindet sich meistens eine empfangstote Zone. Da durch die Klimaverschiebung 
+                    dies relativ zu sehen ist, können wir es fast im ganzen Jahr zu unregelmäßigen 
                     Zeiten beobachten und es kommt zu Störungen. DX'er profitieren natürlich.
                 </p>
             </div>   
