--- a/pmr-bandplan.html
+++ b/pmr-bandplan.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">    
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body class="bg-page">
+<body onload="initPmrBandplan()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
