--- a/pr-geschichte.html
+++ b/pr-geschichte.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body onload="initFrequenzList()" class="bg-page">
+<body onload="initPrHistory()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -21,7 +21,6 @@
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
             <div class="w-50">
-                <h2>Die Entstehung von Paket Radio</h2>
 
                 <p>
                     Bereits seit langer Zeit ist das Funkfernschreiben im Amateurfunk gebräuchlich (RTTY). Mechanische Fernschreibmaschinen
