--- a/ts3-inst-hilfe.html
+++ b/ts3-inst-hilfe.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body onload="initPrefix()" class="bg-page">
+<body onload="initTeamspeakInstHelp()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,38 +20,36 @@
     <!--Content-->
 
         <div class="d-flex flex-wrap justify-center align-center column margin-top-30px margin-bottom-30px txt-center">
-            <div class="">
-                <h2>Teamspeak Installations Hilfe</h2>
+            <div class="w-50">
+                <p class="">
+                    Wenn du nun den Clienten heruntergeladen hast, geht es an die Installation.
+                    Wir empfehlen, TeamSpeak 3 mit den Standardeinstellungen zu installieren und nichts an der Installation zu verändern.
+                </p>
+                <p class="margin-top-30px margin-bottom-30px txt-center">
+                    Wenn du nun TeamSpeak 3 erfolgreich installiert hast, führe es zuerst einmal aus. 
+                    Jetzt meldet sich der Konfigurationsassistent von TeamSpeak 3.
+                </p>    
+                <img src="./assets/img/Assistent.png" alt="">
+                <p class="margin-top-30px margin-bottom-30px txt-center">
+                    Das erste Fenster kannst du mit "Weiter" bestätigen.
+                </p>
+                <img src="./assets/img/Assistent1.png" alt="">
+                <p class="margin-top-30px margin-bottom-30px txt-center">
+                    Im zweiten Fenster kannst du deinen Nicknamen angeben.
+                    Diesen Nicknamen kannst du selbstverständlich jederzeit ändern.
+                    Dann bestätigst du per Klick auf "Weiter".
+                </p>
+                <img src="./assets/img/Assistent3.png" alt="">
+                <p class="margin-top-30px margin-bottom-30px txt-center">
+                    Nun geht es an die Einstellung des Mikrofons. Du hast die Wahl ob man Push-To-Talk aktivieren möchtest
+                    oder die Sprachaktivierung. Wir empfehlen letzteres, weil die Sprachaktivierung um einiges bequemer ist. 
+                    Mit der Sprachaktivierung mussst du nicht ständig irgendeine Taste drücken, um sprechen zu können. 
+                    Möchtest du jedoch Push-To-Talk verwenden, so kannst du hier eine zugehörige Taste zuweisen.
+                    Zur Einstelllung der Empfindlichkeit der Sprachaktivierung klickt du dann auf "Weiter".
+                </p>
+                <img src="./assets/img/Assistent4.png" alt="">
+
             </div>
-            <p class="">
-                Wenn du nun den Clienten heruntergeladen hast, geht es an die Installation.<br> 
-                Wir empfehlen, TeamSpeak 3 mit den Standardeinstellungen zu installieren und nichts an der Installation zu verändern.<br>
-            </p>
-            <p class="margin-top-30px margin-bottom-30px txt-center">
-                 Wenn du nun TeamSpeak 3 erfolgreich installiert hast, führe es zuerst einmal aus.<br> 
-                Jetzt meldet sich der Konfigurationsassistent von TeamSpeak 3.
-            </p>    
-            <img src="./assets/img/Assistent.png" alt="">
-            <p class="margin-top-30px margin-bottom-30px txt-center">
-                Das erste Fenster kannst du mit "Weiter" bestätigen.
-            </p>
-            <img src="./assets/img/Assistent1.png" alt="">
-            <p class="margin-top-30px margin-bottom-30px txt-center">
-                Im zweiten Fenster kannst du deinen Nicknamen angeben.<br>
-                Diesen Nicknamen kannst du selbstverständlich jederzeit ändern.<br> 
-                Dann bestätigst du per Klick auf "Weiter".
-            </p>
-            <img src="./assets/img/Assistent3.png" alt="">
-            <p class="margin-top-30px margin-bottom-30px txt-center">
-                Nun geht es an die Einstellung des Mikrofons. Du hast die Wahl ob man Push-To-Talk aktivieren möchtest<br>
-                oder die Sprachaktivierung. Wir empfehlen letzteres, weil die Sprachaktivierung um einiges bequemer ist.<br> 
-                Mit der Sprachaktivierung mussst du nicht ständig irgendeine Taste drücken, um sprechen zu können.<br> 
-                Möchtest du jedoch Push-To-Talk verwenden, so kannst du hier eine zugehörige Taste zuweisen.<br> 
-                Zur Einstelllung der Empfindlichkeit der Sprachaktivierung klickt du dann auf "Weiter".
-            </p>
-            <img src="./assets/img/Assistent4.png" alt="">
-
-
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
