--- a/was-ist-pmr.html
+++ b/was-ist-pmr.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
-    <script src="./assets/javascript/ct-frequenz.js"></script>
 </head>
-<body onload="initFrequenzList()" class="bg-page">
+<body onload="initWhatIsPMR()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
