--- a/cb-betriebsarten.html
+++ b/cb-betriebsarten.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body class="bg-page">
+<body onload="cbBetriebsarten()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,7 +20,6 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>CB-Funk-Betriebsarten</h2>
             <div class="d-flex w-30 column">
                 <p>
                     <strong>
