--- a/cb-geschichte.html
+++ b/cb-geschichte.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body class="bg-page">
+<body onload="initCbHistory()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,8 +20,6 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-           <h2>CB-Funk-Geschichte</h2>
-
            <div class="cb-history-content">
                 <p>
                     1974 verabschiedete die in CEPT Lissabon eine Empfehlung für einen Hobbyfunk im 27-MHz Bereich.
