--- a/cb-notruf.html
+++ b/cb-notruf.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
-    <script src="./assets/javascript/ct-frequenz.js"></script>
 </head>
-<body onload="initFrequenzList()" class="bg-page">
+<body onload="initCbEmergency()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -21,8 +20,6 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Durchführung eines Notrufs</h2>
-            
             <div class="w-50">
                 <p>
                     Kanal 9 wählen, CQ, Notruf von der Station (Rufnamen), wer kann mich
