--- a/cb-sprache.html
+++ b/cb-sprache.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body class="bg-page">
+<body onload="initCbSpeech()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,7 +20,6 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px">
-            <h2>Die CB-Funk Sprache</h2>
             <div class="w-50">
                 <p>
                 Wer zum ersten Mal in Funkgespräche auf dem 11m-Band hineingehört hat wird den Eindruck gewinnen, 
