--- a/hf-stoerungen.html
+++ b/hf-stoerungen.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <script src="./assets/javascript/main.js"></script>
 </head>
-<body class="bg-page">
+<body onload="initHfStoerungen()" class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -20,46 +20,50 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2>Störungen</h2>
-            <p>
-                Man unterscheidet drei große Gruppen von Störungen und zwar
-            </p>
-            <p>
-                <strong>
-                    1. kosmische und atmosphärische Störungen – QRN
-                </strong>
-            </p> 
-            <p>
-                <strong>
-                    2. Störungen durch elektrische Geräte und Anlagen – QRM
-                </strong>
-            </p> 
-            <p>
-                <strong>
-                    3. Störungen durch CB-Funkgeräte und andere Funkdienste- QRM
-                </strong>
-            </p>
-
-            <p>
-                Gegen <strong>kosmische und atmosphärische Störungen</strong> ist der Mensch nahezu machtlos. Sie entstehen vor allem durch die Einwirkung<br> 
-                der Sonneneinstrahlung, Gewitter usw. und beeinträchtigen vor allem DX-Verbindungen. <strong>Störungen durch elektrische Geräte und<br> 
-                Anlagen</strong> können auch im Nahbereich sehr unangenehme Wirkungen zeigen.<br>
-                Sie haben ihre Ursache meist in Funkenbildungen an Schaltern, Motoren, Zündanlagen von Kraftfahrzeugen u. a.<br> 
-                eine Entstörung ist zwar nach den VDE-Bestimmungen vorgeschrieben, sie reicht aber manchmal nicht aus.<br> 
-                Der CB-BNetzA (Bundesamt für Post und Telekommunikation). Er kann nur die eigenen Elektrogeräte zusätzlich entstören.<br> 
-                Andererseits wacht aber das BNetzA darüber, dass CB-Funkgeräte nicht andere Funkdienste stören.<br> 
-                Wir alle haben z.B. ein Anrecht auf störungsfreien Rundfunk- und Fernsehempfang. Machen die Funkmesswagen<br> 
-                des BNetzA einen CB-Funker als Störer (durch Oberwellen) ausfindig, so muss dieser natürlich für Abhilfe sorgen.<br> 
-                Dies kann z. B. durch Einfügen eines TVI – Filters in die Antennenleitung erfolgen. Bei der gegenseitigen<br> 
-                <strong>Störung von CB-Funkanlagen untereinander</strong> unterscheidet man Gleichkanal – und Nachbarkanalstörungen.<br>  
-                Gleichkanalstörungen machen sich häufig durch einen pfeifenden Ton bemerkbar.<br> 
-                Sie entstehen durch gegenseitige Beeinflussung der auf den gleichen Kanal sendenden Funkgeräte, auch über große<br> 
-                Entfernungen. Die modulierten Träger mischen sich (Kreuzmodulation). Nachbarkanalstörungen werden leider oft<br> 
-                durch nicht einwandfreie Geräte hervorgerufen. Es kommt vor, dass im Nahbereich stark einfallende Sender auf<br> 
-                mehreren Kanälen durchschlagen. Zu geringe Nachbarkanaltrennung, Frequenzverschiebungen und billige Quarze sind<br> 
-                oft für Nachbarkanalstörungen verantwortlich. Selbstverständlich können auch Fernsteuersender die genannten<br> 
-                Störungen verursachen. Sie machen sich in der Regel durch ein Knattergeräusch bemerkbar.
-            </p>
+            <div class="w-50">
+                <p>
+                    <strong>
+                        Man unterscheidet drei große Gruppen von Störungen und zwar
+                    </strong>    
+                </p>
+                <p>
+                    <strong>
+                        1. kosmische und atmosphärische Störungen – QRN
+                    </strong>
+                </p> 
+                <p>
+                    <strong>
+                        2. Störungen durch elektrische Geräte und Anlagen – QRM
+                    </strong>
+                </p> 
+                <p>
+                    <strong>
+                        3. Störungen durch CB-Funkgeräte und andere Funkdienste- QRM
+                    </strong>
+                </p>
+            </div>    
+            <div class="w-50">
+                <p>
+                    Gegen <b>kosmische und atmosphärische Störungen</b> ist der Mensch nahezu machtlos. Sie entstehen vor allem durch die Einwirkung 
+                    der Sonneneinstrahlung, Gewitter usw. und beeinträchtigen vor allem DX-Verbindungen. <b>Störungen durch elektrische Geräte und 
+                    Anlagen</b> können auch im Nahbereich sehr unangenehme Wirkungen zeigen.
+                    Sie haben ihre Ursache meist in Funkenbildungen an Schaltern, Motoren, Zündanlagen von Kraftfahrzeugen u. a. 
+                    eine Entstörung ist zwar nach den VDE-Bestimmungen vorgeschrieben, sie reicht aber manchmal nicht aus. 
+                    Der CB-BNetzA (Bundesamt für Post und Telekommunikation). Er kann nur die eigenen Elektrogeräte zusätzlich entstören. 
+                    Andererseits wacht aber das BNetzA darüber, dass CB-Funkgeräte nicht andere Funkdienste stören. 
+                    Wir alle haben z.B. ein Anrecht auf störungsfreien Rundfunk- und Fernsehempfang. Machen die Funkmesswagen 
+                    des BNetzA einen CB-Funker als Störer (durch Oberwellen) ausfindig, so muss dieser natürlich für Abhilfe sorgen. 
+                    Dies kann z. B. durch Einfügen eines TVI – Filters in die Antennenleitung erfolgen. Bei der gegenseitigen 
+                    <b>Störung von CB-Funkanlagen untereinande> unterscheidet man Gleichkanal – und Nachbarkanalstörungen.  
+                    Gleichkanalstörungen machen sich häufig durch einen pfeifenden Ton bemerkbar. 
+                    Sie entstehen durch gegenseitige Beeinflussung der auf den gleichen Kanal sendenden Funkgeräte, auch über große 
+                    Entfernungen. Die modulierten Träger mischen sich (Kreuzmodulation). Nachbarkanalstörungen werden leider oft 
+                    durch nicht einwandfreie Geräte hervorgerufen. Es kommt vor, dass im Nahbereich stark einfallende Sender auf 
+                    mehreren Kanälen durchschlagen. Zu geringe Nachbarkanaltrennung, Frequenzverschiebungen und billige Quarze sind 
+                    oft für Nachbarkanalstörungen verantwortlich. Selbstverständlich können auch Fernsteuersender die genannten 
+                    Störungen verursachen. Sie machen sich in der Regel durch ein Knattergeräusch bemerkbar.
+                </p>
+            </div>    
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
